<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ResultActivity">

    <TextView
        android:id="@+id/textView_weight_result"
        android:layout_width="130dp"
        android:layout_height="51dp"
        android:layout_marginStart="56dp"
        android:layout_marginTop="272dp"
        android:text="@string/weight"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/button_calculate"
        app:layout_constraintEnd_toStartOf="@+id/inputSize"
        app:layout_constraintHorizontal_bias="0.338"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.664" />

    <TextView
        android:id="@+id/textView_bmi_result"
        android:layout_width="130dp"
        android:layout_height="51dp"
        android:layout_marginStart="56dp"
        android:layout_marginTop="352dp"
        android:text="@string/bmi"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/button_calculate"
        app:layout_constraintEnd_toStartOf="@+id/inputSize"
        app:layout_constraintHorizontal_bias="0.338"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.664" />

    <TextView
        android:id="@+id/textView_bmi_rating"
        android:layout_width="130dp"
        android:layout_height="51dp"
        android:layout_marginStart="56dp"
        android:layout_marginTop="428dp"
        android:text="@string/rating"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/button_calculate"
        app:layout_constraintEnd_toStartOf="@+id/inputSize"
        app:layout_constraintHorizontal_bias="0.338"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.664" />

    <TextView
        android:id="@+id/textView_height_result"
        android:layout_width="130dp"
        android:layout_height="51dp"
        android:layout_marginStart="56dp"
        android:layout_marginTop="192dp"
        android:text="@string/height"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/textView_weigth"
        app:layout_constraintEnd_toStartOf="@+id/inputWeight2"
        app:layout_constraintHorizontal_bias="0.338"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.893" />

    <TextView
        android:id="@+id/textView_resultHeight"
        android:layout_width="130dp"
        android:layout_height="51dp"
        android:layout_marginStart="212dp"
        android:layout_marginTop="192dp"
        android:text=""
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/button_calculate"
        app:layout_constraintEnd_toStartOf="@+id/inputSize"
        app:layout_constraintHorizontal_bias="0.338"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.664" />

    <TextView
        android:id="@+id/textView_resultWeight"
        android:layout_width="130dp"
        android:layout_height="51dp"
        android:layout_marginStart="212dp"
        android:layout_marginTop="272dp"
        android:text=""
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/button_calculate"
        app:layout_constraintEnd_toStartOf="@+id/inputSize"
        app:layout_constraintHorizontal_bias="0.338"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.664" />

    <TextView
        android:id="@+id/textView_resultBmi"
        android:layout_width="130dp"
        android:layout_height="51dp"
        android:layout_marginStart="212dp"
        android:layout_marginTop="352dp"
        android:text=""
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/button_calculate"
        app:layout_constraintEnd_toStartOf="@+id/inputSize"
        app:layout_constraintHorizontal_bias="0.338"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.664" />

    <TextView
        android:id="@+id/textView_resultRating"
        android:layout_width="179dp"
        android:layout_height="169dp"
        android:layout_marginStart="212dp"
        android:layout_marginTop="428dp"
        android:text=""
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/button_calculate"
        app:layout_constraintEnd_toStartOf="@+id/inputSize"
        app:layout_constraintHorizontal_bias="0.338"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.664" />

    <TextView
        android:id="@+id/textView_title_result"
        android:layout_width="148dp"
        android:layout_height="45dp"
        android:layout_marginTop="80dp"
        android:text="@string/result"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button_goToRatingView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="60dp"
        android:text="@string/bmiRating"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.273"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/button_saveBmi"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="60dp"
        android:text="@string/saveBmi"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.774"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>